# fht-shell

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
resources/: resources.gresource.xml
resources/icons/: resources.gresource.xml
resources/ui/: panel-window.ui
src/: application.rs  main.rs  panel.rs  sass.rs
src/daemons/: mod.rs  notifications.rs  power.rs
src/daemons/network_manager/: access_point.rs  device.rs  mod.rs  service.rs  statistics.rs  wired.rs  wireless.rs
src/daemons/upower/: device.rs  mod.rs  service.rs
src/widgets/: mod.rs  time.rs
src/widgets/status/: battery.rs  mod.rs  network.rs
